--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -15,7 +15,7 @@
 
         <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
           <%= form.label t('project')%>
-          <%= form.collection_select :project_id, Project.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'project_edit_select'} %>
+          <%= form.collection_select :project_id, Project.all, :id, :name, {:include_blank => true}, {class: 'form-control', id: 'service_form_project'} %>
         </div>
 
         <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
