--- a/app/views/wares/_form.html.erb
+++ b/app/views/wares/_form.html.erb
@@ -14,7 +14,7 @@
     <div class="form-row">
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('project') %>
-        <%= form.select :project_id, Project.all.map {|project| [project.name + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control', id: 'project_edit_select'} %>
+        <%= form.select :project_id, Project.all.map {|project| [project.name + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control', id: 'ware_form_project'} %>
       </div>
       <div class="form-group col-xs-12 col-sm-4 col-md-12 col-lg-4 col-xl-4">
         <%= form.label t('customer') %>
